[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-polylith-bricks", "hatchling" ]

[project]
name = "aereo"
version = "1.1.1"
description = """\
  Plugin-based satellite data extraction — search across catalogs, extract assets, and reproject to analysis-ready \
  Major TOM grids.\
  """
readme = "README.md"
keywords = [
  "earth-observation",
  "gis",
  "polylith",
  "remote-sensing",
  "satellite",
]
license = "Apache-2.0"
authors = [ { name = "Francisco Dorr", email = "fran.dorr@gmail.com" } ]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
  "attrs>=25.4",
  "cattrs>=24.1",
  "geopandas>=1.1.2",
  "majortom-eg",
  "pandas>=3.0.1",
  "pandera[geopandas]>=0.24",
  "pyproj>=3.7.1",
  "rich>=13",
  "shapely>=2.1.2",
  "structlog>=25.5",
  "typer>=0.12",
  "utm>=0.8.1",
]
urls.Documentation = "https://frandorr.github.io/aereo"
urls.Homepage = "https://github.com/frandorr/aereo"
urls.Issues = "https://github.com/frandorr/aereo/issues"
urls.Repository = "https://github.com/frandorr/aereo"
scripts.aereo = "aereo.cli.main:app"

[tool.hatch]
build.dev-mode-dirs = [ "../../components", "../../bases", "../../development", "." ]
build.hooks.polylith-bricks = {}
build.targets.wheel.packages = [ "aereo" ]

[tool.polylith]
bricks."../../bases/aereo/cli" = "aereo/cli"
bricks."../../bases/aereo/client" = "aereo/client"
bricks."../../components/aereo/asset_downloader" = "aereo/asset_downloader"
bricks."../../components/aereo/eoids" = "aereo/eoids"
bricks."../../components/aereo/backends" = "aereo/backends"
bricks."../../components/aereo/grid" = "aereo/grid"
bricks."../../components/aereo/interfaces" = "aereo/interfaces"
bricks."../../components/aereo/registry" = "aereo/registry"
bricks."../../components/aereo/schemas" = "aereo/schemas"
bricks."../../components/aereo/serialization" = "aereo/serialization"
bricks."../../components/aereo/spatial" = "aereo/spatial"
bricks."../../components/aereo/viz" = "aereo/viz"
