[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61", "wheel" ]

[project]
name = "aereo-test-extractor"
version = "0.1.0"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "aereo", "geopandas" ]
entry-points."aereo.plugins".test_extractor = "test_extractor.core:TestExtractor"

[tool.setuptools]
packages = [ "test_extractor" ]
